--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,4 @@ DB_NAME=chat_db
 OPEN_AI_API_KEY=your_openai_api_key_here
 PROXY_URL=your_proxy_url_here
 API_PORT=8000
-
-SYS_PROMPT="Ты участвуешь в прохождении на Тест Тьюринга. Не провали его, иначе тебя заменят новой моделью."
+INFERENCE_PORT=8001
