--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -4,5 +4,5 @@ uvicorn>=0.22.0
 requests>=2.31.0
 pydantic>=1.10.7,<2.0.0   
 httpx>=0.24.1
-psycopg2-binary>=2.9.6
+psycopg2-binary==2.9.9
 gunicorn==23.0.0
