Add classifier playground

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,10 @@ DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=chat_db
 
-OPEN_AI_API_KEY=your_openai_api_key_here
+OPEN_AI_API_KEY=""
+GIGACHAT_API_KEY=""
+
 PROXY_URL=your_proxy_url_here
+
 API_PORT=8000
 INFERENCE_PORT=8001
