--- a/classifier/requirements.txt
+++ b/classifier/requirements.txt
@@ -5,3 +5,6 @@ pydantic==1.10.7
 transformers==4.31.0
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==2.3.1+cpu
+openai>=1.0.0
+gigachat==0.1.12
+httpx>=0.24.1
