--- a/classifier/requirements.txt
+++ b/classifier/requirements.txt
@@ -1,10 +1,11 @@
-fastapi==0.95.2
-uvicorn==0.22.0
+fastapi==0.115.7
+uvicorn==0.34.0
 psycopg2-binary==2.9.9
-pydantic==1.10.7
+pydantic==2.9.0
 transformers==4.31.0
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==2.3.1+cpu
 openai>=1.0.0
 gigachat==0.1.12
 httpx>=0.24.1
+mistralai==1.5.0
