Remove useless mistral complete llm validation layer

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,8 @@ DB_NAME=chat_db
 
 OPEN_AI_API_KEY=""
 GIGACHAT_API_KEY=""
-MISTRAL_API_KEY=""
 
-PROXY_URL=your_proxy_url_here
+PROXY_URL=""
 
 API_PORT=8000
 INFERENCE_PORT=8001
