--- a/classifier/requirements.txt
+++ b/classifier/requirements.txt
@@ -1,15 +1,13 @@
 fastapi==0.115.7
 uvicorn==0.34.0
-psycopg2-binary==2.9.9
 pydantic==2.9.0
 transformers==4.31.0
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==2.3.1+cpu
-openai>=1.0.0
+openai==1.60.2
 gigachat==0.1.12
 httpx>=0.24.1
-mistralai==1.5.0
 scikit-learn==1.6.1
-Levenshtein==0.26.1
-language-tool-python==2.8.2
 joblib==1.4.2
+psycopg2-binary==2.9.10
+gunicorn==23.0.0
